sorting out some errors in the horse riding page, and adding a z-index to the nav bar to make sure it is always on top of the content.

--- a/My hobbies/HorseRiding/HorseRiding.css
+++ b/My hobbies/HorseRiding/HorseRiding.css
@@ -60,7 +60,6 @@
     }
 #horse {
       padding: 100px 2rem 4rem;
-      background-color: var(--bg2);
 }
 .horse-inner{
       display: grid;
@@ -68,18 +67,20 @@
       gap: 4rem;
       align-items: left;
       width: 100%;
+      background-color: var(--bg2);
 }
 
-volunnteer {
+#volunterring {
       padding: 100px 2rem 4rem;
-      background-color: var(--bg3);
+  
 }
-.volunteer-inner{
+.volunterring-inner{
       display: grid;
       grid-template-columns: 1fr  1fr;
       gap: 4rem;
       align-items: left;
       width: 100%;
+      background-color: var(--bg3);
 }
 
 footer {
